--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             </div>
             <div>
                 <div>Would you recommend freeCodeCamp to a friend?</div>
-                <label><input type="radio" class="inline"/>Definitely </label>
-                <label><input type="radio" />Maybe </label>
-                <label><input type="radio" />Not sure </label>
+                <label><input type="radio" value="Definitely" name="user_recommend" class="inline"/>Definitely </label>
+                <label><input type="radio" value="Maybe" name="user_recommend" class="inline"/>Maybe </label>
+                <label><input type="radio" value="Not sure" name="user_recommend" class="inline"/>Not sure </label>
             </div>
             <div>
                 <label>What is your favorite feature of freeCodeCamp?
