--- a/index.html
+++ b/index.html
@@ -10,66 +10,75 @@
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <h1 id="title">Survey Form</h1>
-            <p id="description">Thank you for taking the time to help us improve the platform</p>
-        </header>
-        <form id="survey-form" action="">
-            <div>
-                <label>Name <input type="text" placeholder="Enter your name" required/></label>
-                <label>Email <input type="text" placeholder="Enter your Email" required/></label>
-                <label>Age (optional)<input type="text" placeholder="Age" /></label>
-            </div>
-            <div>
-                <label>Which option best describes your current role?
-                    <select>
-                        <option>Select current role</option>
-                        <option>Student</option>
-                        <option>Full Time Job</option>
-                        <option>Full Time Learner</option>
-                        <option>Prefer not to say</option>
-                        <option>Other</option>
-                    </select>
-                </label>
-            </div>
-            <div>
-                <div>Would you recommend freeCodeCamp to a friend?</div>
-                <label><input type="radio" value="Definitely" name="user_recommend" class="inline"/>Definitely </label>
-                <label><input type="radio" value="Maybe" name="user_recommend" class="inline"/>Maybe </label>
-                <label><input type="radio" value="Not sure" name="user_recommend" class="inline"/>Not sure </label>
-            </div>
-            <div>
-                <label>What is your favorite feature of freeCodeCamp?
-                    <select>
-                        <option>Select current role</option>
-                        <option>Student</option>
-                        <option>Full Time Job</option>
-                        <option>Full Time Learner</option>
-                        <option>Prefer not to say</option>
-                        <option>Other</option>
-                    </select>
-                </label>
-            </div>
-            <div>
-                What would you like to see improved? (check all that apply)
-                <label><input type="checkbox">Front-end Projects</label>
-                <label><input type="checkbox">Back-end Projects</label>
-                <label><input type="checkbox">Data Visualization</label>
-                <label><input type="checkbox">Challenges</label>
-                <label><input type="checkbox">Open Source Community</label>
-                <label><input type="checkbox">Gitter help Community</label>
-                <label><input type="checkbox">Videos</label>
-                <label><input type="checkbox">City Meetups</label>
-                <label><input type="checkbox">Wiki</label>
-                <label><input type="checkbox">Forum</label>
-                <label><input type="checkbox">Additional Courses</label>
-            </div>
-            <div>
-                <label>Any comments or suggestions? <textarea name="" id="" cols="30" rows="8"></textarea></label>
-            </div>
-        </form>
-    </div>
+<div class="container">
+    <header>
+        <h1 id="title">Survey Form</h1>
+        <p id="description">Thank you for taking the time to help us improve the platform</p>
+    </header>
+    <form id="survey-form" action="">
+        <div class="form-group">
+            <label id="name-label" for="name">Name </label>
+            <input id="name" type="text" placeholder="Enter your name" required/>
+        </div>
+        <div class="form-group">
+            <label id="email-label" for="email">Email </label>
+            <input id="email" type="email" placeholder="Enter your Email" required/>
+        </div>
+        <div class="form-group">
+            <label id="number-label" for="number">Age (optional)</label>
+            <input id="number" type="number" placeholder="Age" min="10" max="99"/>
+        </div>
+        <div class="form-group">
+            <div>Which option best describes your current role?</div>
+            <select>
+                <option>Select current role</option>
+                <option>Student</option>
+                <option>Full Time Job</option>
+                <option>Full Time Learner</option>
+                <option>Prefer not to say</option>
+                <option>Other</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <div>Would you recommend freeCodeCamp to a friend?</div>
+            <label><input type="radio" value="Definitely" name="user_recommend" class="inline" checked/>Definitely
+            </label>
+            <label><input type="radio" value="Maybe" name="user_recommend" class="inline"/>Maybe </label>
+            <label><input type="radio" value="Not sure" name="user_recommend" class="inline"/>Not sure </label>
+        </div>
+        <div class="form-group">
+            <div>What is your favorite feature of freeCodeCamp?</div>
+            <select id="dropdown">
+                <option>Select current role</option>
+                <option>Student</option>
+                <option>Full Time Job</option>
+                <option>Full Time Learner</option>
+                <option>Prefer not to say</option>
+                <option>Other</option>
+            </select>
+        </div>
+        <div class="choice">
+            What would you like to see improved? (check all that apply)
+            <label><input type="checkbox" value="1">Front-end Projects</label>
+            <label><input type="checkbox" value="2">Back-end Projects</label>
+            <label><input type="checkbox" value="3">Data Visualization</label>
+            <label><input type="checkbox" value="4">Challenges</label>
+            <label><input type="checkbox" value="5">Open Source Community</label>
+            <label><input type="checkbox" value="6">Gitter help Community</label>
+            <label><input type="checkbox" value="7">Videos</label>
+            <label><input type="checkbox" value="8">City Meetups</label>
+            <label><input type="checkbox" value="9">Wiki</label>
+            <label><input type="checkbox" value="10">Forum</label>
+            <label><input type="checkbox" value="11">Additional Courses</label>
+        </div>
+        <div class="form-group">
+            <label for="comment">Any comments or suggestions? </label>
+            <textarea name="comment" id="comment" placeholder="Enter your comment here..."></textarea>
+
+        </div>
+        <button type="submit" id="submit">Submit</button>
+    </form>
+</div>
 
 </body>
 
